--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@ http://www.templatemo.com/tm-515-eatery
                               </div>
                               <address class="wow fadeInUp" data-wow-delay="0.4s">
                                    <p>+91 7972302443 </p>
-                                   <p>Email me at: <a href="salonibhutada15@gmail.com">salonibhutada15@gmail.com</a></p>
+                                   <p>Email me at: salonibhutada15@gmail.com </p>
                               </address>
 							  <br>
 							  <ul class="wow fadeInUp social-icon" data-wow-delay="0.4s">
