--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@ http://www.templatemo.com/tm-515-eatery
                                    <h2 class="wow fadeInUp" data-wow-delay="0.2s">Reservation</h2>
                               </div>
                               <address class="wow fadeInUp" data-wow-delay="0.4s">
-                                   <p>+91 7972302443 </p>
+                                   <p>Contact No : +91 7972302443 </p>
                                    <p>Email me at: salonibhutada15@gmail.com </p>
                               </address>
 							  <br>
