--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ http://www.templatemo.com/tm-515-eatery
                               <div class="wow fadeInUp" data-wow-delay="0.4s">
                                    <p>I am a software engineer who enjoys painting in my free time. I've always loved sketching since, I was a child. Recently, I found myself becoming more and more creative. I am inspired by very well-known artist and hope to become one someday.
                                    <p>Painting has eventually become a medium of expressing my thoughts as well as ideas. It is like expressing the artistic mind of mine. Like people say art is a form, whether creating or observing which helps in reducing the stress hormone. Indeed painting my ideas enlightens my mood.</p>
-                                   <p>There are some of my artworks that I have put together, do take a look around. If you like my artwork do Supoort and Follow me on Instagram. Link is in the contact section. Thank you for your love and time!</p>
+                                   <p>There are some of my artworks that I have put together, do take a look around. If you like my artwork do Supoort and Follow me on Instagram. Link is in the contact section. Thank you for your LOVE and SUPPORT!</p>
                               </div>
                          </div>
                     </div>
@@ -480,7 +480,7 @@ http://www.templatemo.com/tm-515-eatery
                                    <div class="menu-info">
                                         <div class="menu-item">
                                              <h3>Stippling art deer painting</h3>
-                                             <p>Deer</p>
+                                             <p>All good things are wild & free</p>
                                         </div>
                                         <!--<div class="menu-price">
                                              <span>Rs.500</span>
