--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ http://www.templatemo.com/tm-515-eatery
                               <img src="images/img1.jpg" class="img-responsive" alt="Geometric Lion Canvas Painting">
                                    <div class="team-hover">
                                         <div class="team-item">
-                                             <h4>Highlight of the month</h4> 
+                                             <h4>Geometric Lion Painting</h4> 
                                              <!--<ul class="social-icon">
                                                   <li><a href="#" class="fa fa-linkedin-square"></a></li>
                                                   <li><a href="#" class="fa fa-envelope-o"></a></li>
@@ -193,7 +193,7 @@ http://www.templatemo.com/tm-515-eatery
                               <img src="images/im2.jpg" class="img-responsive" alt="Buddha Canvas Painting">
                                    <div class="team-hover">
                                         <div class="team-item">
-                                             <h4>Highlight of the month</h4>
+                                             <h4>Gautama Buddha Painting</h4>
                                              <!--<ul class="social-icon">
                                                   <li><a href="#" class="fa fa-instagram"></a></li>
                                                   <li><a href="#" class="fa fa-flickr"></a></li>
@@ -202,8 +202,8 @@ http://www.templatemo.com/tm-515-eatery
                                    </div>
                          </div>
                          <div class="team-info">
-                              <h3> Gautama Buddha Painting</h3>
-							  <p> Material - Canvas <br> Canvas Size - 12x16 inch | 30x40 cm </p>
+                              <h3>Gautama Buddha Painting</h3>
+			      <p> Material - Canvas <br> Canvas Size - 12x16 inch | 30x40 cm </p>
 
                          </div>
                     </div>
@@ -213,7 +213,7 @@ http://www.templatemo.com/tm-515-eatery
                               <img src="images/img4.jpg" class="img-responsive" alt="">
                                    <div class="team-hover">
                                         <div class="team-item">
-                                             <h4>Highlight of the month</h4>
+                                             <h4>Radha Krishna Painting</h4>
                                              <!--<ul class="social-icon">
                                                   <li><a href="#" class="fa fa-github"></a></li>
                                                   <li><a href="#" class="fa fa-google"></a></li>
@@ -223,7 +223,7 @@ http://www.templatemo.com/tm-515-eatery
                          </div>
                          <div class="team-info">
                               <h3>Radha Krishna Painting</h3>
-							  <p> Material - Canvas <br> Canvas Size - 12x16 inch | 30x40 cm</p>
+			      <p> Material - Canvas <br> Canvas Size - 12x16 inch | 30x40 cm</p>
 
                               <!--<p>Rs.4500</p>-->
                          </div>
