--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ http://www.templatemo.com/tm-515-eatery
                                    <div class="container">
                                         <div class="col-md-8 col-sm-12">
                                              <h2>Artesy</h2>
-                                             <h1>Highlights I feel, are my best pieces of work, Do you feel the same?</h1>
+                                             <h1>Highlights I feel, are my best pieces of work. Do you feel the same?</h1>
                                              <a href="#team" class="section-btn btn btn-default smoothScroll">Highlight of the month</a>
                                         </div>
                                    </div>
@@ -135,13 +135,13 @@ http://www.templatemo.com/tm-515-eatery
                          <div class="about-info">
                               <div class="section-title wow fadeInUp" data-wow-delay="0.2s">
                                    <h4>A little bit about ME</h4>
-                                   <h2>I've Been Making Them Since 2019</h2>
+                                   <h2>I have been painting since 2019…</h2>
                               </div>
 
                               <div class="wow fadeInUp" data-wow-delay="0.4s">
-                                   <p>I am a software engineer who enjoys painting in my free time. I've always loved sketching since, I was a child. I am inspired by very well-known artist and hope to become one someday.
-                                   <p>Painting has eventually become a medium of expressing my thoughts. Like people say art is a form, whether creating or observing which helps in reducing the stress hormone. Indeed, painting my ideas enlightens my mood.</p>
-                                   <p>There are some of my artworks that I have put together, do take a look around. If you like my artwork do Supoort and Follow me on Instagram. Link is in the contact section. Thank you for your love and time!</p>
+                                   <p>I am a Software Engineer who enjoys painting in my free time. I've always enjoyed sketching since, I was a child. I am inspired by very well-known artists' and hope to become one someday.
+                                   <p>Painting has eventually become a medium of expressing vividness & enlighten oneself. Art is a form, whether creating or observing helps in reducing one’s stress hormones and enhances mood</p>
+                                   <p>There are some of my artworks that, I have put together, do take a look around. Also, if you like my artwork do Supoort and Follow me on Instagram. Link is in the contact section. Thank you for your love and time!</p>
                               </div>
                          </div>
                     </div>
@@ -164,7 +164,7 @@ http://www.templatemo.com/tm-515-eatery
 
                     <div class="col-md-12 col-sm-12">
                          <div class="section-title wow fadeInUp" data-wow-delay="0.1s">
-                              <h2>Let's look at our Highlights of the Month</h2>
+                              <h2>Let’s look at some highlights of the Month</h2>
                               <h4>They are one of my favourite ARTS</h4>
                          </div>
                     </div>
@@ -174,7 +174,7 @@ http://www.templatemo.com/tm-515-eatery
                               <img src="images/img1.jpg" class="img-responsive" alt="Geometric Lion Canvas Painting">
                                    <div class="team-hover">
                                         <div class="team-item">
-                                             <h4>Geometric Lion Painting</h4> 
+                                             <h4>Highlight of the month</h4> 
                                              <!--<ul class="social-icon">
                                                   <li><a href="#" class="fa fa-linkedin-square"></a></li>
                                                   <li><a href="#" class="fa fa-envelope-o"></a></li>
@@ -193,7 +193,7 @@ http://www.templatemo.com/tm-515-eatery
                               <img src="images/im2.jpg" class="img-responsive" alt="Buddha Canvas Painting">
                                    <div class="team-hover">
                                         <div class="team-item">
-                                             <h4>Gautama Buddha Painting</h4>
+                                             <h4>Highlight of the month</h4>
                                              <!--<ul class="social-icon">
                                                   <li><a href="#" class="fa fa-instagram"></a></li>
                                                   <li><a href="#" class="fa fa-flickr"></a></li>
@@ -202,8 +202,8 @@ http://www.templatemo.com/tm-515-eatery
                                    </div>
                          </div>
                          <div class="team-info">
-                              <h3>Gautama Buddha Painting</h3>
-			      <p> Material - Canvas <br> Canvas Size - 12x16 inch | 30x40 cm </p>
+                              <h3> Gautama Buddha Painting</h3>
+							  <p> Material - Canvas <br> Canvas Size - 12x16 inch | 30x40 cm </p>
 
                          </div>
                     </div>
@@ -213,7 +213,7 @@ http://www.templatemo.com/tm-515-eatery
                               <img src="images/img4.jpg" class="img-responsive" alt="">
                                    <div class="team-hover">
                                         <div class="team-item">
-                                             <h4>Radha Krishna Painting</h4>
+                                             <h4>Highlight of the month</h4>
                                              <!--<ul class="social-icon">
                                                   <li><a href="#" class="fa fa-github"></a></li>
                                                   <li><a href="#" class="fa fa-google"></a></li>
@@ -223,7 +223,7 @@ http://www.templatemo.com/tm-515-eatery
                          </div>
                          <div class="team-info">
                               <h3>Radha Krishna Painting</h3>
-			      <p> Material - Canvas <br> Canvas Size - 12x16 inch | 30x40 cm</p>
+							  <p> Material - Canvas <br> Canvas Size - 12x16 inch | 30x40 cm</p>
 
                               <!--<p>Rs.4500</p>-->
                          </div>
