--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ http://www.templatemo.com/tm-515-eatery
                               <div class="wow fadeInUp" data-wow-delay="0.4s">
                                    <p>I am a Software Engineer who enjoys painting in my free time. I've always enjoyed sketching since, I was a child. I am inspired by very well-known artists' and hope to become one someday.
                                    <p>Painting has eventually become a medium of expressing vividness & enlighten oneself. Art is a form, whether creating or observing helps in reducing one’s stress hormones and enhances mood</p>
-                                   <p>There are some of my artworks that, I have put together, do take a look around. Also, if you like my artwork do Supoort and Follow me on Instagram. Link is in the contact section. Thank you for your love and time!</p>
+                                   <p>There are some of my artworks that, I have put together, do take a look around. Also, if you like my artwork do Supoort and Follow me on Instagram. Link is in the contact section. Thank you for your LOVE and SUPPORT!</p>
                               </div>
                          </div>
                     </div>
