--- a/index.html
+++ b/index.html
@@ -444,8 +444,8 @@ http://www.templatemo.com/tm-515-eatery
 
                                    <div class="menu-info">
                                         <div class="menu-item">
-                                             <p style="font-size:12px">Stippling art scenary painting</p>
-                                             <p>Scenary <br> Material - Canvas <br> Canvas Size - 8x10 inch | 20x35 cm </p>
+                                             <p style="font-size:12px">Stippling Art Scenery Painting</p>
+                                             <p> Material - Canvas <br> Canvas Size - 8x10 inch | 20x35 cm </p>
                                         </div>
                                         <!--<div class="menu-price">
                                              <span>Rs.500</span>
@@ -484,7 +484,7 @@ http://www.templatemo.com/tm-515-eatery
                                    <div class="menu-info">
                                         <div class="menu-item">
                                              <p style="font-size:12px">Stippling art deer painting</p>
-                                             <p>Deer  <br> Material - Canvas <br> Canvas Size - 10x12 inch | 25x25 cm</p>
+                                             <p> Material - Canvas <br> Canvas Size - 10x12 inch | 25x25 cm</p>
                                         </div>
                                         <!--<div class="menu-price">
                                              <span>Rs.500</span>
