--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@ http://www.templatemo.com/tm-515-eatery
                               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3647.3030413476204!2d100.5641230193719!3d13.757206847615207!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf51ce6427b7918fc!2sG+Tower!5e0!3m2!1sen!2sth!4v1510722015945" allowfullscreen></iframe>
                          </div>
                     </div>-->
-                         <div class=" col-xs-6 col-md-6 col-sm-12">
+                         <div class="col-md-6 col-sm-12">
                          <div class="footer-info">
                               <div class="section-title">
                                    <h2 class="wow fadeInUp" data-wow-delay="0.2s">Reservation</h2>
@@ -648,7 +648,7 @@ http://www.templatemo.com/tm-515-eatery
                                    <p>Contact No - +91 7972302443 
                                    <br>Email me at: <a href="salonibhutada15@gmail.com">salonibhutada15@gmail.com</a>
                               
-							  <ul class="wow fadeInUp social-icon" data-wow-delay="0.4s">
+			     <ul class="wow fadeInUp social-icon" data-wow-delay="0.4s">
                               <!--<li><a href="#" class="fa fa-facebook-square" attr="facebook icon"></a></li>-->
                               <li><a href="https://instagram.com/__artesy__?igshid=1rgd9df0xkie0" class="fa fa-instagram"></a></li> &nbsp;
 			      <br>Copyright &copy; 2021 &nbsp; Artesy</p>
