--- a/index.html
+++ b/index.html
@@ -12,13 +12,12 @@ Eatery Cafe Template
 http://www.templatemo.com/tm-515-eatery
 
 -->
-
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=Edge">
      <meta name="description" content="">
      <meta name="keywords" content="">
      <meta name="author" content="">
-     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+     <meta name="viewport" content="width=device-width, initial-scale=1">
 
      <link rel="stylesheet" href="css/bootstrap.min.css">
      <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -88,7 +87,7 @@ http://www.templatemo.com/tm-515-eatery
                          <div class="item item-first">
                               <div class="caption">
                                    <div class="container">
-                                        <div class="col-md-10 col-sm-12">
+                                        <div class="col-md-12 col-sm-12">
                                              <h2>Artesy</h2>
                                              <h1>Highlights I feel, are my best pieces of work. Do you feel the same?</h1>
                                              <a href="#team" class="section-btn btn btn-default smoothScroll">Highlight of the month</a>
@@ -100,7 +99,7 @@ http://www.templatemo.com/tm-515-eatery
                          <div class="item item-second">
                               <div class="caption">
                                    <div class="container">
-                                        <div class="col-md-10 col-sm-12">
+                                        <div class="col-md-12 col-sm-12">
                                              <h3>Your Perfect Home Decor</h3>
                                              <h1>Hanging art on the wall is a great way to add personality and character to your space</h1>
                                              <a href="#menu" class="section-btn btn btn-default smoothScroll">Paintings</a>
@@ -112,7 +111,7 @@ http://www.templatemo.com/tm-515-eatery
                          <div class="item item-third">
                               <div class="caption">
                                    <div class="container">
-                                        <div class="col-md-10 col-sm-12">
+                                        <div class="col-md-12 col-sm-12">
                                              <h3>New Art Collection in Town</h3>
                                              <h1>I encourage you to explore my art collection! Choose the perfect painting for your space</h1>
                                              <a href="#contact" class="section-btn btn btn-default smoothScroll">Bookings</a>
