--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ http://www.templatemo.com/tm-515-eatery
                          <div class="item item-first">
                               <div class="caption">
                                    <div class="container">
-                                        <div class="col-md-12 col-sm-12">
+                                        <div class="col-md-10 col-sm-12">
                                              <h2>Artesy</h2>
                                              <h1>Highlights I feel, are my best pieces of work. Do you feel the same?</h1>
                                              <a href="#team" class="section-btn btn btn-default smoothScroll">Highlight of the month</a>
@@ -99,7 +99,7 @@ http://www.templatemo.com/tm-515-eatery
                          <div class="item item-second">
                               <div class="caption">
                                    <div class="container">
-                                        <div class="col-md-12 col-sm-12">
+                                        <div class="col-md-10 col-sm-12">
                                              <h3>Your Perfect Home Decor</h3>
                                              <h1>Hanging art on the wall is a great way to add personality and character to your space</h1>
                                              <a href="#menu" class="section-btn btn btn-default smoothScroll">Paintings</a>
@@ -111,7 +111,7 @@ http://www.templatemo.com/tm-515-eatery
                          <div class="item item-third">
                               <div class="caption">
                                    <div class="container">
-                                        <div class="col-md-12 col-sm-12">
+                                        <div class="col-md-10 col-sm-12">
                                              <h3>New Art Collection in Town</h3>
                                              <h1>I encourage you to explore my art collection! Choose the perfect painting for your space</h1>
                                              <a href="#contact" class="section-btn btn btn-default smoothScroll">Bookings</a>
@@ -138,8 +138,8 @@ http://www.templatemo.com/tm-515-eatery
                               </div>
 
                               <div class="wow fadeInUp" data-wow-delay="0.4s">
-                                   <p>I am a Software Engineer who enjoys painting in my free time. I've always enjoyed sketching since, I was a child. I am inspired by very well-known artists' and hope to become one someday. &nbsp;
-                                   <br>Painting has eventually become a medium of expressing vividness & enlighten oneself. Art is a form, whether creating or observing helps in reducing one’s stress hormones and enhances mood. &nbsp;
+                                   <p>I am a Software Engineer who enjoys painting in my free time. I've always enjoyed sketching since, I was a child. I am inspired by very well-known artists' and hope to become one someday. <br>
+                                   <br>Painting has eventually become a medium of expressing vividness & enlighten oneself. Art is a form, whether creating or observing helps in reducing one’s stress hormones and enhances mood. <br>
                                    <br>There are some of my artworks that, I have put together, do take a look around. Also, if you like my artwork do Supoort and Follow me on Instagram. Link is in the contact section. Thank you for your LOVE and SUPPORT!</p>
                               </div>
                          </div>
