--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@ http://www.templatemo.com/tm-515-eatery
                               </div>
 
                               <div class="wow fadeInUp" data-wow-delay="0.4s">
-                                   <p>I am a Software Engineer who enjoys painting in my free time. I've always enjoyed sketching since, I was a child. I am inspired by very well-known artists' and hope to become one someday. <br>
-                                   <br>Painting has eventually become a medium of expressing vividness & enlighten oneself. Art is a form, whether creating or observing helps in reducing one’s stress hormones and enhances mood. <br>
-                                   <br>There are some of my artworks that, I have put together, do take a look around. Also, if you like my artwork do Supoort and Follow me on Instagram. Link is in the contact section. Thank you for your LOVE and SUPPORT!</p>
+                                   <p>I am a Software Engineer who enjoys painting in my free time. I've always enjoyed sketching since, I was a child. I am inspired by very well-known artists' and hope to become one someday. </p> <br>
+                                   <p>Painting has eventually become a medium of expressing vividness & enlighten oneself. Art is a form, whether creating or observing helps in reducing one’s stress hormones and enhances mood. </p> <br>
+                                   <p>There are some of my artworks that, I have put together, do take a look around. Also, if you like my artwork do Supoort and Follow me on Instagram. Link is in the contact section. Thank you for your LOVE and SUPPORT!</p>
                               </div>
                          </div>
                     </div>
