--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ http://www.templatemo.com/tm-515-eatery
                                         <div class="col-md-10 col-sm-12">
                                              <h2>Artesy</h2>
                                              <h1>Highlights I feel, are my best pieces of work. Do you feel the same?</h1>
-                                             <a href="#team" class="section-btn btn btn-default smoothScroll">Highlight of the month</a>
+                                             <a href="#team" class="section-btn btn btn-default smoothScroll">Highlights of the month</a>
                                         </div>
                                    </div>
                               </div>
