--- a/index.html
+++ b/index.html
@@ -344,12 +344,12 @@ http://www.templatemo.com/tm-515-eatery
                     <div class="col-md-4 col-sm-3">
                          <!-- MENU THUMB -->
                          <div class="menu-thumb">
-                              <a href="images/bg5.jpg" class="image-popup" title="Home Canvas Painting">
-                                   <img src="images/bg5.jpg" class="img-responsive" alt="Home Canvas Painting">
+                              <a href="images/bg5.jpg" class="image-popup" title="Flourishing Garden">
+                                   <img src="images/bg5.jpg" class="img-responsive" alt="Flourishing Garden">
 
                                    <div class="menu-info">
                                         <div class="menu-item">
-                                             <p style="font-size:12px"> Florishing Garden</p>
+                                             <p style="font-size:12px"> Flourishing Garden</p>
                                              <p> Home is where the heart is! <br> Material - Canvas <br> Canvas Size - 12x16 inch | 30x40 cm</p>
                                         </div>
                                         <!-- <div class="menu-price">
