--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ http://www.templatemo.com/tm-515-eatery
                               <img src="images/img1.jpg" class="img-responsive" alt="Geometric Lion Canvas Painting">
                                    <div class="team-hover">
                                         <div class="team-item">
-                                             <h4>Highlight of the month</h4> 
+                                             <h4>Geometric Lion Painting</h4> 
                                              <!--<ul class="social-icon">
                                                   <li><a href="#" class="fa fa-linkedin-square"></a></li>
                                                   <li><a href="#" class="fa fa-envelope-o"></a></li>
@@ -192,7 +192,7 @@ http://www.templatemo.com/tm-515-eatery
                               <img src="images/im2.jpg" class="img-responsive" alt="Buddha Canvas Painting">
                                    <div class="team-hover">
                                         <div class="team-item">
-                                             <h4>Highlight of the month</h4>
+                                             <h4>Gautama Buddha Painting</h4>
                                              <!--<ul class="social-icon">
                                                   <li><a href="#" class="fa fa-instagram"></a></li>
                                                   <li><a href="#" class="fa fa-flickr"></a></li>
@@ -212,7 +212,7 @@ http://www.templatemo.com/tm-515-eatery
                               <img src="images/img4.jpg" class="img-responsive" alt="">
                                    <div class="team-hover">
                                         <div class="team-item">
-                                             <h4>Highlight of the month</h4>
+                                             <h4>Radha Krishna Painting</h4>
                                              <!--<ul class="social-icon">
                                                   <li><a href="#" class="fa fa-github"></a></li>
                                                   <li><a href="#" class="fa fa-google"></a></li>
@@ -248,8 +248,8 @@ http://www.templatemo.com/tm-515-eatery
                     <div class="col-md-3 col-sm-3">
                          <!-- MENU THUMB -->
                          <div class="menu-thumb">
-                              <a href="images/img11.jpg" class="image-popup" title="Krishna Canvas Painting">
-                                   <img src="images/img11.jpg" class="img-responsive" alt="Krishna Canvas Painting">
+                              <a href="images/img11.jpg" class="image-popup" title="Lord Krishna Painting">
+                                   <img src="images/img11.jpg" class="img-responsive" alt="Lord Krishna Painting">
 
                                    <div class="menu-info">
                                         <div class="menu-item">
@@ -363,8 +363,8 @@ http://www.templatemo.com/tm-515-eatery
 			<div class="col-md-4 col-sm-3">
                          <!-- MENU THUMB -->
                          <div class="menu-thumb">
-                              <a href="images/img10.jpg" class="image-popup" title="Scenary Canvas Painting">
-                                   <img src="images/img10.jpg" class="img-responsive" alt="Scenary Canvas Painting">
+                              <a href="images/img10.jpg" class="image-popup" title="One fine EVENING">
+                                   <img src="images/img10.jpg" class="img-responsive" alt="One fine EVENING">
 
                                    <div class="menu-info">
                                         <div class="menu-item">
@@ -384,8 +384,8 @@ http://www.templatemo.com/tm-515-eatery
 			<div class="col-md-4 col-sm-3">
                          <!-- MENU THUMB -->
                          <div class="menu-thumb">
-                              <a href="images/img7.jpg" class="image-popup" title="Mountains Canvas Painting ">
-                                   <img src="images/img7.jpg" class="img-responsive" alt="Mountains Canvas Painting">
+                              <a href="images/img7.jpg" class="image-popup" title=" The Mountains are calling ">
+                                   <img src="images/img7.jpg" class="img-responsive" alt=" The Mountains are calling">
 
                                    <div class="menu-info">
                                         <div class="menu-item">
@@ -401,8 +401,8 @@ http://www.templatemo.com/tm-515-eatery
                     <div class="col-md-4 col-sm-3">
                          <!-- MENU THUMB -->
                          <div class="menu-thumb">
-                              <a href="images/bg4.jpg" class="image-popup" title="Geometric Butterfly Canvas Painting">
-                                   <img src="images/bg4.jpg" class="img-responsive" alt="Geometric Butterfly Canvas Painting">
+                              <a href="images/bg4.jpg" class="image-popup" title="Beauty of Nature">
+                                   <img src="images/bg4.jpg" class="img-responsive" alt="Beauty of Nature">
 
                                    <div class="menu-info">
                                         <div class="menu-item">
@@ -496,13 +496,13 @@ http://www.templatemo.com/tm-515-eatery
 			<div class="col-md-4 col-sm-3">
                          <!-- MENU THUMB -->
                          <div class="menu-thumb">
-                              <a href="images/im8.jpg" class="image-popup" title="Wandering">
-                                   <img src="images/im8.jpg" class="img-responsive" alt="Wandering">
+                              <a href="images/im8.jpg" class="image-popup" title="Wanderlust">
+                                   <img src="images/im8.jpg" class="img-responsive" alt="Wanderlust">
 
                                    <div class="menu-info">
                                         <div class="menu-item">
-                                             <p style="font-size:12px">wanderlust</p>
-                                             <p>Wandering <br> Material - Canvas<br> Canvas Size - 10x12 inch | 25x25 cm</p>
+                                             <p style="font-size:12px">Wanderlust</p>
+                                             <p> Material - Canvas<br> Canvas Size - 10x12 inch | 25x25 cm</p>
                                         </div>
                                         <!--<div class="menu-price">
                                              <span>Rs.500</span>
@@ -554,8 +554,8 @@ http://www.templatemo.com/tm-515-eatery
 			<div class="col-md-4 col-sm-3">
                          <!-- MENU THUMB -->
                          <div class="menu-thumb">
-                              <a href="images/im9.png" class="image-popup" title="My Favourite piece">
-                                   <img src="images/im9.png" class="img-responsive" alt="My Favourite piece">
+                              <a href="images/im9.png" class="image-popup" title="My Favourite">
+                                   <img src="images/im9.png" class="img-responsive" alt="My Favourite">
 
                                    <div class="menu-info">
                                         <div class="menu-item">
