--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@ http://www.templatemo.com/tm-515-eatery
      <meta name="description" content="">
      <meta name="keywords" content="">
      <meta name="author" content="">
-     <meta name="viewport" content="width=device-width, initial-scale=1">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+     <link rel=”stylesheet” href=”css/bootstrap.css”>
+     <link rel=”stylesheet” href=”css/bootstrap-responsive.css”>
      <link rel="stylesheet" href="css/bootstrap.min.css">
      <link rel="stylesheet" href="css/font-awesome.min.css">
      <link rel="stylesheet" href="css/animate.css">
@@ -45,7 +47,7 @@ http://www.templatemo.com/tm-515-eatery
 
 
      <!-- MENU -->
-     <section class="navbar custom-navbar navbar-fixed-top" role="navigation">
+     <section class="navbar fixed-top navbar-expand-md navbar-light bg-light" role="navigation">
           <div class="container">
 
                <div class="navbar-header">
