--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ http://www.templatemo.com/tm-515-eatery
 
 
      <!-- MENU -->
-     <section class="navbar fixed-top navbar-expand-md navbar-light bg-light" role="navigation">
+     <section class="navbar custom-navbar navbar-fixed-top" role="navigation">
           <div class="container">
 
                <div class="navbar-header">
