--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                               <div class="caption">
                                    <div class="container">
                                         <div class="col-md-8 col-sm-12">
-                                             <h2>Artesy</h2>
+                                             <h2>Welcome to my art collection!</h2>
                                              <h1>Highlights I feel, are my best pieces of work, Do you feel the same?</h1>
                                              <a href="#team" class="section-btn btn btn-default smoothScroll">Highlight of the month</a>
                                         </div>
@@ -105,7 +105,7 @@
                               <div class="caption">
                                    <div class="container">
                                         <div class="col-md-8 col-sm-12">
-                                             <h3>New Art Collection in Town</h3>
+                                             <h3>New Artwork in the Town</h3>
                                              <h1>I encourage you to explore my art collection! Choose the perfect painting for your space</h1>
                                              <a href="#contact" class="section-btn btn btn-default smoothScroll">Bookings</a>
                                         </div>
